# tg-weather_bot

./: .env  .env.example  .gitignore  CMakeLists.txt  README.md  architecture_schem.excalidraw  docker-compose.yml  main.cpp  main.сpp  reset_count.sql  weatherapi.cpp  weatherapi.h
postgres/: Dockerfile  pg_cron.sh  schema.sql
src/: .env  .env.example  CMakeLists.txt  Dockerfile  curleasy.cpp  curleasy.h  main.cpp  multiQueue.h  mytgbot.cpp  mytgbot.h  postgresclient.cpp  postgresclient.h  weatherapi.cpp  weatherapi.h  worker.cpp
